--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 group = 'art.ryanstew'
 version = '1.0.0'
+archivesBaseName = "C:/Users/ryans/Dropbox/Plugin Test Server/plugins/GetUUID"
 
 repositories {
     mavenCentral()
