--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,17 @@ name: GetUUID
 version: '${version}'
 main: art.ryanstew.getuuid.GetUUID
 api-version: '1.20'
+author: RuntimeRyn
+
+commands:
+    getuuid:
+        description: Get the UUID of a player by their name!
+        permission: getuuid.use
+
+permissions:
+    getuuid.use:
+        description: Permission to use /getuuid.
+        default: op
+    getuuid.reload:
+        description: Permission to use /getuuid reload.
+        default: op
